Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@325530 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/iterations.xml
+++ b/language/oop5/iterations.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: ca6478c611c9a702eca7063d28c960b4cead5d49 Maintainer: jpberdejo Status: ready -->
- <sect1 xml:id="language.oop5.iterations" xmlns="http://docbook.org/ns/docbook">
-  <title>Iteración de objetos</title>
-  <para>
-
-   PHP 5 ofrece una manera para que los objetos sean definidos por lo que es posible iterar
-   a través de una lista de elementos, con, por ejemplo, una sentencia &foreach;. Por defecto,
-   todas las propiedades <link linkend="language.oop5.visibility">visibles</link> serán utilizados
-   para la iteración.
-    
-  </para>
-
-  <example>
-   <title>Iteración simple de objeto</title>
-   <programlisting role="php">
+<!-- EN-Revision: f130f1800e609998604dbe50278a69879ba6c01f Maintainer: jpberdejo Status: ready -->
+<sect1 xml:id="language.oop5.iterations" xmlns="http://docbook.org/ns/docbook">
+ <title>Iteración de objetos</title>
+ <para>
+  
+  PHP 5 ofrece una manera para que los objetos sean definidos por lo que es posible iterar
+  a través de una lista de elementos, con, por ejemplo, una sentencia &foreach;. Por defecto,
+  todas las propiedades <link linkend="language.oop5.visibility">visibles</link> serán utilizados
+  para la iteración.
+  
+ </para>
+ 
+ <example>
+  <title>Iteración simple de objeto</title>
+  <programlisting role="php">
 <![CDATA[
 <?php
 class MyClass
@@ -62,18 +62,21 @@ protected => protected var
 private => private var
 ]]>
    </screen>
-
+   
   </example>
-
- <para>
-  Como se muestra en la salida, el &foreach; itera a través de
-  todas las variables <link linkend="language.oop5.visibility">visibles</link> que se puedan
-  acceder. Para dar un paso más allá se puede implementar una
-  <link linkend="language.oop5.interfaces">interfaz</link>
-  interna de PHP 5 llamada <varname>Iterator</varname>. Esto permite al objeto decidir qué y cómo
-  el objeto será iterado.
- </para>
-
+  
+  <para>
+   Como se muestra en la salida, el &foreach; itera a través de todas las propiedades
+   <link linkend="language.oop5.visibility">visibles</link> que se puedan
+   acceder.
+  </para>
+  <para>
+   Para dar un paso más, se puede implementar la <link linkend="language.oop5.interfaces">interfaz</link>
+   <interfacename>Iterator</interfacename>.
+   Esto permite al objeto decidir cómo será iterado y qué valores
+   estarán disponibles en cada iteración.
+  </para>
+  
   <example>
    <title>Iteración de objeto implementando Iterator</title>
    <programlisting role="php">
@@ -158,15 +161,20 @@ next:
 valid:
 ]]>
    </screen>
-
+   
   </example>
-
+  
   <para>
-   También se puede definir la clase de modo que no tiene que definir
-   todas las funciones de <varname>Iterator</varname>, simplemente implementando
-   la interfaz de PHP 5 <varname>IteratorAggregate</varname>.
+   La <link linkend="language.oop5.interfaces">interface</link>
+   <interfacename>IteratorAggregate</interfacename>
+   se puede usar como alternativa para implementar todos los métodos de
+   <interfacename>Iterator</interfacename>.
+   <interfacename>IteratorAggregate</interfacename> solamente requiere la
+   implementación de un único método,
+   <methodname>IteratorAggregate::getIterator</methodname>, el cual debería devolver
+   una instancia de una clase que implemente <interfacename>Iterator</interfacename>.
   </para>
-
+  
   <example>
    <title>Iteración de objeto implementando IteratorAggregate</title>
    <programlisting role="php">
@@ -227,18 +235,18 @@ current:
 valid:
 ]]>
    </screen>
-
+   
   </example>
-
+  
   <note>
    <para>
     Para más ejemplos de iteradores, vea la
     <link linkend="spl.iterators">extensión SPL</link>.
    </para>
   </note>
+  
+</sect1>
 
- </sect1>
- 
 <!-- Keep this comment at the end of the file
 Local variables:
 mode: sgml
